finish with index

--- a/index.html
+++ b/index.html
@@ -19,11 +19,8 @@
             <nav class="header-nav">
                 <a href=""><img class="header__logo" src="./image/AXITlogo.svg" alt="logo"></a>
 
-                <input type="radio" id="burger" name="mobil-menu" class="menu__mobil-input">
-                <label for="burger" class="icon-mobil-menu menu__mobil-burger"><a class="menu__mobil-burger"></a></label>
-
-                <input type="radio" id="xmark" name="mobil-menu" class="menu__mobil-input">
-                <label for="xmark" class="icon-xmark menu__mobil-xmark"><a class="menu__mobil-xmark"></a></label>
+                <a class="menu__mobil-burger icon-mobil-menu"></a>
+                <a class="menu__mobil-xmark icon-xmark"></a>
 
                 <ul class="menu">
                     <li class="menu__item">
@@ -152,7 +149,7 @@
                         </div>
                         <div class="col-xl-5 col-md-6 col-12">
                             <div class="tabs__img-box">
-                                <img class="tabs__img" src="./image/Rectangle 111111.png" alt="statue of liberty">
+                                <img class="tabs__img" src="./image/Rectangle111111.png" alt="statue of liberty">
                             </div>
                         </div>
                     </div>
@@ -174,7 +171,7 @@
                         </div>
                         <div class="col-xl-5 col-md-6 col-12">
                             <div class="tabs__img-box">
-                                <!-- <img class="tabs__img" src="./image/Rectangle 111111.png" alt="statue of liberty"> -->
+                                <!-- <img class="tabs__img" src="./image/Rectangle111111.png" alt="statue of liberty"> -->
                             </div>
                         </div>
                     </div>
@@ -196,7 +193,7 @@
                         </div>
                         <div class="col-xl-5 col-md-6 col-12">
                             <div class="tabs__img-box">
-                                <img class="tabs__img" src="./image/Rectangle 111111.png" alt="statue of liberty">
+                                <img class="tabs__img" src="./image/Rectangle111111.png" alt="statue of liberty">
                             </div>
                         </div>
                     </div>
@@ -292,77 +289,67 @@
                 <h2 class="block__header title2">what our customers are saying</h2>
                 <hr class="line">
                 <p class="block__text reviews__text title5">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-                <div class="reviews__list">
-                    <ul class="row">
-                        <div class="col-md-4 col-12">
-                            <li class="reviews__item">
-                                <div class="reviews__quote">
-                                    <blockquote class="reviews__quote-descr title5">Lorem ipsum dolor sit amet, 
-                                        consectetur adipisicing elit. Doloribus 
-                                        accusamus expedita repellat similique 
-                                        odio aspernatur ex, architecto eaque 
-                                        quo suscipit.
-                                    </blockquote>
-                                    <div class="triangle-down">
-                                    </div>
-                                </div>
-                                <div class="reviewes__manager">
-                                    <img class="reviews__manager-img" src="./image/Ellipse 7manager1.png" alt="davis">
-                                    <div class="reviews__manager-description">
-                                        <p class="reviews__manager-name title4">Davis Rhiel Madsen</p>
-                                        <p class="title5">Manager</p>
-                                    </div>
-                                </div>  
-                            </li>
+                <ul class="reviews__list">
+                    <li class="reviews__item">
+                        <div class="reviews__quote">
+                            <blockquote class="reviews__quote-descr title5">Lorem ipsum dolor sit amet, 
+                                consectetur adipisicing elit. Doloribus 
+                                accusamus expedita repellat similique 
+                                odio aspernatur ex, architecto eaque 
+                                quo suscipit.
+                            </blockquote>
+                            <div class="triangle-down">
+                            </div>
                         </div>
-                        <div class="col-md-4 col-12">
-                            <li class="reviews__item">
-                                <div class="reviews__quote">
-                                    <blockquote class="reviews__quote-descr title5">Lorem ipsum dolor sit amet, 
-                                        consectetur adipisicing elit. Doloribus 
-                                        accusamus expedita repellat similique 
-                                        odio aspernatur ex, architecto eaque 
-                                        quo suscipit.
-                                    </blockquote>
-                                    <div class="triangle-down">
-                                    </div>
-                                </div>
-                                <div class="reviewes__manager">
-                                    <img class="reviews__manager-img" src="./image/Ellipse 7manager2.png" alt="Jaydon">
-                                    <div class="reviews__manager-description">
-                                        <p class="reviews__manager-name title4">Jaydon Rosser</p>
-                                        <p class="title5">Manager</p>
-                                    </div>
-                                </div>
-                            </li>
+                        <div class="reviewes__manager">
+                            <img class="reviews__manager-img" src="./image/Ellipse7manager1.png" alt="davis">
+                            <div class="reviews__manager-description">
+                                <p class="reviews__manager-name title4">Davis Rhiel Madsen</p>
+                                <p class="title5">Manager</p>
+                            </div>
+                        </div>  
+                    </li>
+                    <li class="reviews__item">
+                        <div class="reviews__quote">
+                            <blockquote class="reviews__quote-descr title5">Lorem ipsum dolor sit amet, 
+                                consectetur adipisicing elit. Doloribus 
+                                accusamus expedita repellat similique 
+                                odio aspernatur ex, architecto eaque 
+                                quo suscipit.
+                            </blockquote>
+                            <div class="triangle-down">
+                            </div>
                         </div>
-                        <div class="col-md-4 col-12">
-                            <li class="reviews__item">
-                                <div class="reviews__quote">
-                                        <blockquote class="reviews__quote-descr title5">Lorem ipsum dolor sit amet, 
-                                            consectetur adipisicing elit. Doloribus 
-                                            accusamus expedita repellat similique 
-                                            odio aspernatur ex, architecto eaque 
-                                            quo suscipit.
-                                        </blockquote>
-                                        <div class="triangle-down">
-                                        </div>
-                                </div>    
-                                <div class="reviewes__manager">
-                                    <img class="reviews__manager-img" src="./image/Ellipse 7manager3.png" alt="Cooper">
-                                    <div class="reviews__manager-description">
-                                        <p class="reviews__manager-name title4">Cooper Dorwart</p>
-                                        <p class="title5">Manager</p>
-                                        </div>
-                                </div>
-                            </li>
+                        <div class="reviewes__manager">
+                            <img class="reviews__manager-img" src="./image/Ellipse7manager2.png" alt="Jaydon">
+                            <div class="reviews__manager-description">
+                                <p class="reviews__manager-name title4">Jaydon Rosser</p>
+                                <p class="title5">Manager</p>
+                            </div>
                         </div>
-                    </ul>
-                </div>
+                    </li>
+                    <li class="reviews__item">
+                        <div class="reviews__quote">
+                            <blockquote class="reviews__quote-descr title5">Lorem ipsum dolor sit amet, 
+                                consectetur adipisicing elit. Doloribus 
+                                accusamus expedita repellat similique 
+                                odio aspernatur ex, architecto eaque 
+                                quo suscipit.
+                            </blockquote>
+                            <div class="triangle-down">
+                            </div>
+                        </div>    
+                        <div class="reviewes__manager">
+                            <img class="reviews__manager-img" src="./image/Ellipse7manager3.png" alt="Cooper">
+                            <div class="reviews__manager-description">
+                                <p class="reviews__manager-name title4">Cooper Dorwart</p>
+                                <p class="title5">Manager</p>
+                            </div>
+                        </div>
+                    </li>
+                </ul>
             </div>
         </section>
-
-</div>
 
         <!--STYLISH AXURE DESIGN-->
         <section class="stylish dark">
@@ -380,13 +367,13 @@
                 <h2 class="block__header title2">contact us</h2>
                 <hr class="line">
                 <p class="block__text contact__text title5">Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
-                <form class="contact__form" action="">
+                <form class="contact__form" action="URL">
                     <div class="contact__form-part1">
                         <input class="contact__form-input" type="text" name="nick1" size="40" placeholder="Name">
                         <input class="contact__form-input" type="text" name="email1" size="40" placeholder="Email">
                         <input class="contact__form-input password" type="password" name="password1" size="40" placeholder="Password">     
                     </div>
-                    <textarea class="contact__textarea" rows="11" type="text" name="message" size="40" placeholder="Message"></textarea>
+                    <textarea class="contact__textarea" rows="11" name="message" cols="40" placeholder="Message"></textarea>
                     <button class="button big-button color-button contact__form-button">Send message</button>
                 </form>
             </div>
