--- a/index.html
+++ b/index.html
@@ -47,36 +47,31 @@
         <!--Main banner-->
         <section class="main-banner dark">
             <div class="container">
-                <div class="banner__box">
-                    <div class="row">
-                        <div class="col-xl-7 col-lg-6 col-12">
-                            <div class="banner__box1"> 
-                                <img class="banner__logo" src="./image/AXITlogo.svg" alt="logo">
-                                <h1 class="banner__title title1">MODERN AXURE TEMPLATE FOR BEAUTIFUL PROTOTYPES</h1>
-                                <hr class="line light-line banner__line">
-                                <p class="banner__text title5">Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
-                                <a class="small-button clear-button button banner__button" href="" download>Download</a>
-                            </div>
+                <div class="banner__box row">
+                    <div class="col-xl-7 col-lg-6 col-12">
+                        <div class="banner__box1"> 
+                            <img class="banner__logo" src="./image/AXITlogo.svg" alt="logo">
+                            <h1 class="banner__title title1">MODERN AXURE TEMPLATE FOR BEAUTIFUL PROTOTYPES</h1>
+                            <hr class="line light-line banner__line">
+                            <p class="banner__text title5">Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
+                            <a class="small-button clear-button button banner__button" href="" download>Download</a>
                         </div>
-                        <div class="col-xl-5 col-lg-6 col">
-                            <div class="banner__form-box">
-                                <h2 class="form-box__header title4">Try Your <em class="free">FREE</em> Trial Today</h2>
-                                <form class="banner__form" action="URL">
-                                    <div class="form__container">
-                                        <div class="banner__form-item">
-                                            <input class="banner__form-input" type="text" name="nick" placeholder="Name">
-                                        </div>
-                                        <div class="banner__form-item">
-                                            <input class="banner__form-input" type="text" name="email" placeholder="Email">
-                                        </div>
-                                        <div class="banner__form-item">
-                                            <input class="banner__form-input password" type="password" name="password" placeholder="Password">
-                                        </div>
-                                        <button class="button form__button">Get started</button>
-                                    </div>
-                                </form>
-                                
-                            </div>
+                    </div>
+                    <div class="col-xl-5 col-lg-6 col">
+                        <div class="banner__form-box">
+                            <h2 class="form-box__header title4">Try Your <em class="free">FREE</em> Trial Today</h2>
+                            <form class="banner__form" action="URL">
+                                <div class="banner__form-item">
+                                    <input class="banner__form-input" type="text" name="nick" placeholder="Name">
+                                </div>
+                                <div class="banner__form-item">
+                                    <input class="banner__form-input" type="text" name="email" placeholder="Email">
+                                </div>
+                                <div class="banner__form-item">
+                                    <input class="banner__form-input password" type="password" name="password" placeholder="Password">
+                                </div>
+                                <button class="button form__button">Get started</button>
+                            </form>
                         </div>
                     </div>
                 </div>
@@ -86,39 +81,37 @@
         <!--Social Media-->
         <section class="media">
             <div class="container ">
-                <div class="media__box">
-                    <div class="row">
-                        <div class="col-lg-5 col-md-6 col-12">
-                            <div class="media__box1">
-                                <h2 class="media__header title4">Social Media</h2>
-                                <p class="media__text title5">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod bibendum laoreet.</p>
-                            </div>
+            <div class="media__box row">
+                    <div class="col-lg-5 col-md-6 col-12">
+                        <div class="media__box1">
+                            <h2 class="media__header title4">Social Media</h2>
+                            <p class="media__text title5">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod bibendum laoreet.</p>
                         </div>
-                        <div class="col-lg-7 col">
-                            <ul class="media__list">
-                                <li class="media__item">
-                                    <a class="icon-facebook media__item-link" href=""></a>
-                                </li>
-                                <li class="media__item">
-                                    <a class="icon-twitter  media__item-link" href=""></a>
-                                </li>
-                                <li class="media__item">
-                                    <a class="icon-linkedin  media__item-link" href=""></a>
-                                </li>
-                                <li class="media__item">
-                                    <a class="icon-pinterest  media__item-link" href=""></a>
-                                </li>
-                                <li class="media__item">
-                                    <a class="icon-instagram  media__item-link" href=""></a>
-                                </li>
-                                <li class="media__item">
-                                    <a class="icon-github  media__item-link" href=""></a>
-                                </li>
-                                <li class="media__item">
-                                    <a class="icon-rss  media__item-link" href=""></a>
-                                </li>
-                            </ul>
-                        </div>
+                    </div>
+                    <div class="col-lg-7 col">
+                        <ul class="media__list">
+                            <li class="media__item">
+                                <a class="icon-facebook media__item-link" href=""></a>
+                            </li>
+                            <li class="media__item">
+                                <a class="icon-twitter  media__item-link" href=""></a>
+                            </li>
+                            <li class="media__item">
+                                <a class="icon-linkedin  media__item-link" href=""></a>
+                            </li>
+                            <li class="media__item">
+                                <a class="icon-pinterest  media__item-link" href=""></a>
+                            </li>
+                            <li class="media__item">
+                                <a class="icon-instagram  media__item-link" href=""></a>
+                            </li>
+                            <li class="media__item">
+                                <a class="icon-github  media__item-link" href=""></a>
+                            </li>
+                            <li class="media__item">
+                                <a class="icon-rss  media__item-link" href=""></a>
+                            </li>
+                        </ul>
                     </div>
                 </div>
             </div>
