--- a/index.html
+++ b/index.html
@@ -62,13 +62,13 @@
                             <h2 class="form-box__header title4">Try Your <em class="free">FREE</em> Trial Today</h2>
                             <form class="banner__form" action="URL">
                                 <div class="banner__form-item">
-                                    <input class="banner__form-input" type="text" name="nick" placeholder="Name">
+                                    <input required class="banner__form-input" type="text" name="nick" placeholder="Name">
                                 </div>
                                 <div class="banner__form-item">
-                                    <input class="banner__form-input" type="text" name="email" placeholder="Email">
+                                    <input required class="banner__form-input" type="email" name="email" placeholder="Email">
                                 </div>
                                 <div class="banner__form-item">
-                                    <input class="banner__form-input password" type="password" name="password" placeholder="Password">
+                                    <input required class="banner__form-input password" type="password" name="password" placeholder="Password">
                                 </div>
                                 <button class="button form__button">Get started</button>
                             </form>
